[package]
name = "envoyrustapi"
version = "0.1.0"
authors = ["Ling Yuan <lingyuan2014@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf-codegen-pure = "2.18.1"

[build-dependencies]
protobuf-codegen-pure = "2.18.1"

[[bin]]
name = "envoyrustapi"
path = "src/bin/main.rs"