[package]
name = "envoyrustapi"
version = "0.1.0"
authors = ["Ling Yuan <lingyuan2014@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.18.1"
protobuf-codegen-pure = "2.18.1"
protoc-rust = "2.18.1"
tempfile = "3.1.0"
glob = "0.3.0"

[build-dependencies]
protobuf-codegen-pure = "2.18.1"
protoc-rust = "2.18.1"
tempfile = "3.1.0"
glob = "0.3.0"

[[bin]]
name = "envoyrustapi"
path = "src/bin/main.rs"